force-app/main/default/objects/Alliance_Deal_Registration__c/Alliance_Deal_Registration__c.object-meta.xml
<CustomObject>
    <label>Alliance Deal Registration</label>
    <nameField>
        <displayFormat>ADR-{0000}</displayFormat>
        <label>Alliance Deal Registration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alliance Deal Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>