force-app/main/default/objects/Alliance_Deal_Registration__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Alliance Deal Registrations</relationshipLabel>
    <relationshipName>Alliance_Deal_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>