force-app/main/default/objects/Alliance_Deal_Registration__c/fields/Alliance_Partner__c.field-meta.xml
<CustomField>
    <fullName>Alliance_Partner__c</fullName>
    <label>Alliance Partner</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Alliance_Partners</valueSetName>
    </valueSet>
</CustomField>