force-app/main/default/objects/Alliance_Deal_Registration__c/fields/Alliance_Partner_Email__c.field-meta.xml
<CustomField>
    <fullName>Alliance_Partner_Email__c</fullName>
    <label>Alliance Partner Email</label>
    <type>Email</type>
</CustomField>