force-app/main/default/objects/Alliance_Deal_Registration__c/fields/Alliance_Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Alliance_Partner_Name__c</fullName>
    <label>Alliance Partner Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>