force-app/main/default/objects/Alliance_Deal_Registration__c/fields/Alliance_Partner_Phone__c.field-meta.xml
<CustomField>
    <fullName>Alliance_Partner_Phone__c</fullName>
    <label>Alliance Partner Phone</label>
    <type>Phone</type>
</CustomField>