force-app/main/default/objects/Alliance_Deal_Registration__c/fields/AWS_Status__c.field-meta.xml
<CustomField>
    <fullName>AWS_Status__c</fullName>
    <label>AWS Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>