force-app/main/default/objects/Alliance_Deal_Registration__c/fields/aWSCloseDate__c.field-meta.xml
<CustomField>
    <fullName>aWSCloseDate__c</fullName>
    <label>aWSCloseDate</label>
    <type>DateTime</type>
</CustomField>