force-app/main/default/objects/Alliance_Deal_Registration__c/fields/BDM__c.field-meta.xml
<CustomField>
    <fullName>BDM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BDM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Alliance_Deal_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>