force-app/main/default/objects/Alliance_Deal_Registration__c/fields/Co_Sell_Created__c.field-meta.xml
<CustomField>
    <fullName>Co_Sell_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Co-Sell Created</label>
    <type>Checkbox</type>
</CustomField>