force-app/main/default/objects/Alliance_Deal_Registration__c/fields/Co_sell_Id__c.field-meta.xml
<CustomField>
    <fullName>Co_sell_Id__c</fullName>
    <externalId>true</externalId>
    <label>Alliance Opportunity Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>