force-app/main/default/objects/Alliance_Deal_Registration__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Comments</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>