force-app/main/default/objects/Alliance_Deal_Registration__c/fields/Comments_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Comments_Last_Updated__c</fullName>
    <label>Comments Last Updated</label>
    <type>DateTime</type>
</CustomField>