force-app/main/default/objects/Alliance_Deal_Registration__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Alliance Deal Registrations</relationshipLabel>
    <relationshipName>Alliance_Deal_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>