force-app/main/default/objects/Alliance_Deal_Registration__c/fields/isThisForMarketplace__c.field-meta.xml
<CustomField>
    <fullName>isThisForMarketplace__c</fullName>
    <label>isThisForMarketplace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>