force-app/main/default/objects/Alliance_Deal_Registration__c/fields/Match_Status__c.field-meta.xml
<CustomField>
    <fullName>Match_Status__c</fullName>
    <label>Match Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Net New Lead</fullName>
            </value>
            <value>
                <fullName>Contact Match</fullName>
            </value>
            <value>
                <fullName>Domain Match</fullName>
            </value>
            <value>
                <fullName>Lead Match</fullName>
            </value>
            <value>
                <fullName>Account Match</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>