force-app/main/default/objects/Alliance_Deal_Registration__c/fields/PatchManager__c.field-meta.xml
<CustomField>
    <fullName>PatchManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PatchManager</label>
    <referenceTo>PatchManager__c</referenceTo>
    <relationshipLabel>Alliance Deal Registrations</relationshipLabel>
    <relationshipName>Alliance_Deal_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>