force-app/main/default/objects/Alliance_Deal_Registration__c/fields/Raw_Country__c.field-meta.xml
<CustomField>
    <fullName>Raw_Country__c</fullName>
    <label>Raw Country</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>