force-app/main/default/objects/Alliance_Deal_Registration__c/fields/Raw_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Raw_Country_Code__c</fullName>
    <label>Raw Country Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>