force-app/main/default/objects/Alliance_Deal_Registration__c/fields/Raw_State__c.field-meta.xml
<CustomField>
    <fullName>Raw_State__c</fullName>
    <label>Raw State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>