force-app/main/default/objects/Alliance_Deal_Registration__c/fields/Raw_State_Code__c.field-meta.xml
<CustomField>
    <fullName>Raw_State_Code__c</fullName>
    <label>Raw State Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>