force-app/main/default/objects/Alliance_Deal_Registration__c/fields/Route_to_SDR__c.field-meta.xml
<CustomField>
    <fullName>Route_to_SDR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Route to SDR</label>
    <type>Checkbox</type>
</CustomField>