force-app/main/default/objects/Alliance_Deal_Registration__c/fields/SLG__c.field-meta.xml
<CustomField>
    <fullName>SLG__c</fullName>
    <label>SLG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SLG</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>