force-app/main/default/objects/Alliance_Deal_Registration__c/fields/stage__c.field-meta.xml
<CustomField>
    <fullName>stage__c</fullName>
    <label>AWS Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>