force-app/main/default/objects/Alliance_Deal_Registration__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>7 Closed Won</fullName>
            </value>
            <value>
                <fullName>7 Closed Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>