force-app/main/default/objects/Alliance_Deal_Registration__c/validationRules/BDM_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>BDM_is_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>BDM__c == null</errorConditionFormula>
    <errorMessage>BDM is required</errorMessage>
</ValidationRule>